<resources>
    <string name="app_name">PC1DAM21100310</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">login</string>
    <string name="drawer">drawer</string>
    <string name="listado">listado</string>
    <string name="equipo">equipo</string>
    <string name="rendimiento">rendimiento</string>
    <string name="email">Enter email</string>
    <string name="password">Enter password</string>
    <string name="signin">SIGN IN</string>
    <string name="rend">RENDIMIENTO</string>
    <string name="km">Kilómetros recorridos</string>
    <string name="min">Minutos jugados</string>
    <string name="calcular">Calcular</string>
    <string name="es">El rendimiento es:</string>
    <string name="equipos">EQUIPOS</string>
    <string name="players">PLAYERS</string>
    <string name="returnlogin">Return to login</string>
    <string name="name">Jone Smith</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>