<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RendimientoFragment">

    <TextView
        android:id="@+id/tv_rend"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="44dp"
        android:text="@string/rend"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/et_km"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_km"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/km"
        app:layout_constraintBottom_toTopOf="@+id/et_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rend" />

    <EditText
        android:id="@+id/et_min"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/min"
        app:layout_constraintBottom_toTopOf="@+id/btn_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_km" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="23dp"
        android:text="@string/calcular"
        app:layout_constraintBottom_toTopOf="@+id/tv_es"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_min" />

    <TextView
        android:id="@+id/tv_es"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="14dp"
        android:text="@string/es"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="166dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_es" />

</androidx.constraintlayout.widget.ConstraintLayout>